Bug - Fix sidecard text alignment

--- a/persoportfolio/src/app/sidecard/sidecard.component.scss
+++ b/persoportfolio/src/app/sidecard/sidecard.component.scss
@@ -45,3 +45,7 @@ li {
 .cursor{
     cursor: pointer;
 }
+
+.fa{
+  width:10%;
+}
